--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -73,8 +73,9 @@
     <Content Include="InfoUsuario.aspx" />
     <Content Include="Inicio.aspx" />
     <Content Include="OpcionesAdmin.aspx" />
+    <Content Include="P_Inicio.css" />
     <Content Include="Registrarse.aspx" />
-    <Content Include="StyleSheet1.css" />
+    <Content Include="Estilos.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
