--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Desarrolladora.cs" />
+    <Compile Include="Distribuidora.cs" />
+    <Compile Include="Juego.cs" />
+    <Compile Include="Key.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
