V 0.6.1 Solamente agregue la entidad categoria

--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Categoria.cs" />
     <Compile Include="Desarrolladora.cs" />
     <Compile Include="Distribuidora.cs" />
     <Compile Include="Juego.cs" />
