--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NegocioDes.cs" />
+    <Compile Include="NegocioDis.cs" />
     <Compile Include="NegocioJuego.cs" />
     <Compile Include="NegocioUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
