V 1.04 Agregue las clase de negocioKeys y daoKeys con sus respectivas estructuras. Hice para que se puedan agregar keys y les puse un requierfieldvalidator al txt de la serial y del id de juego. Tambien arregle la consulta de la funcion para contar las keys ya que se habia puesto una consulta que no coincidia.

--- a/Dao/Dao.csproj
+++ b/Dao/Dao.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DaoDes.cs" />
     <Compile Include="DaoDis.cs" />
     <Compile Include="DaoJuego.cs" />
+    <Compile Include="DaoKey.cs" />
     <Compile Include="DaoUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
