--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -71,6 +71,34 @@
     <Content Include="Catalogo.aspx" />
     <Content Include="Contacto.aspx" />
     <Content Include="DescripcionJuego.aspx" />
+    <Content Include="imagenes\IMG-00001.jpg" />
+    <Content Include="imagenes\IMG-00002.jpg" />
+    <Content Include="imagenes\IMG-00003.jpg" />
+    <Content Include="imagenes\IMG-00004.jpg" />
+    <Content Include="imagenes\IMG-00005.jpg" />
+    <Content Include="imagenes\IMG-00006.jpg" />
+    <Content Include="imagenes\IMG-00007.jpg" />
+    <Content Include="imagenes\IMG-00008.jpg" />
+    <Content Include="imagenes\IMG-00009.jpg" />
+    <Content Include="imagenes\IMG-00010.jpg" />
+    <Content Include="imagenes\IMG-00011.jpg" />
+    <Content Include="imagenes\IMG-00012.jpg" />
+    <Content Include="imagenes\IMG-00013.jpg" />
+    <Content Include="imagenes\IMG-00014.jpg" />
+    <Content Include="imagenes\IMG-00015.jpg" />
+    <Content Include="imagenes\IMG-00016.jpg" />
+    <Content Include="imagenes\IMG-00017.jpg" />
+    <Content Include="imagenes\IMG-00018.jpg" />
+    <Content Include="imagenes\IMG-00019.jpg" />
+    <Content Include="imagenes\IMG-00020.jpg" />
+    <Content Include="imagenes\IMG-00021.jpg" />
+    <Content Include="imagenes\IMG-00022.jpg" />
+    <Content Include="imagenes\IMG-00023.jpg" />
+    <Content Include="imagenes\IMG-00024.jpg" />
+    <Content Include="imagenes\IMG-00025.jpg" />
+    <Content Include="imagenes\IMG-00026.jpg" />
+    <Content Include="imagenes\IMG-00027.jpg" />
+    <Content Include="imagenes\IMG-00028.jpg" />
     <Content Include="InfoUsuario.aspx" />
     <Content Include="Inicio.aspx" />
     <Content Include="OpcionesAdmin.aspx" />
