metodoXUsuario realize la estructura de entidad, dao y negocio de metodoXUsuario y agregue para que se pueda hacer una carga para el usuario, faltaria poner un grd con los metodos de pago o mostrarlos de alguna forma

--- a/Dao/Dao.csproj
+++ b/Dao/Dao.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DaoDis.cs" />
     <Compile Include="DaoJuego.cs" />
     <Compile Include="DaoKey.cs" />
+    <Compile Include="DaoMetodoXUsuario.cs" />
     <Compile Include="DaoUsuario.cs" />
     <Compile Include="DaoVentas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
