--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -48,6 +48,7 @@
     <Compile Include="NegocioDis.cs" />
     <Compile Include="NegocioJuego.cs" />
     <Compile Include="NegocioKey.cs" />
+    <Compile Include="NegocioMetodoXUsuario.cs" />
     <Compile Include="NegocioUsuario.cs" />
     <Compile Include="NegocioVentas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
