--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Distribuidora.cs" />
     <Compile Include="Juego.cs" />
     <Compile Include="Key.cs" />
+    <Compile Include="MetodoXUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="Ventas.cs" />
