--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="NegocioCategoria.cs" />
     <Compile Include="NegocioCategoriaXJuego.cs" />
     <Compile Include="NegocioDes.cs" />
+    <Compile Include="NegocioDetalleVenta.cs" />
     <Compile Include="NegocioDis.cs" />
     <Compile Include="NegocioJuego.cs" />
     <Compile Include="NegocioKey.cs" />
