V 0.3 cambios de Sebas en el css de catalogo

--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -71,6 +71,7 @@
     <Content Include="Carrito.aspx" />
     <Content Include="Catalogo.aspx" />
     <Content Include="Contacto.aspx" />
+    <Content Include="css\P_Catalogo.css" />
     <Content Include="css\P_Metodo.css" />
     <Content Include="css\P_Carrito.css" />
     <Content Include="css\P_Contacto.css" />
