Union de varias branches con dev

--- a/Vistas/Vistas.csproj
+++ b/Vistas/Vistas.csproj
@@ -73,11 +73,13 @@
     <Content Include="Contacto.aspx" />
     <Content Include="css\P_BMLJuego.css" />
     <Content Include="css\Descripcion.css" />
+    <Content Include="css\P_Catalogo.css" />
     <Content Include="css\P_Metodo.css" />
     <Content Include="css\P_Carrito.css" />
     <Content Include="css\P_Contacto.css" />
     <Content Include="css\P_InfoUsuario.css" />
     <Content Include="css\P_OpcAdmin.css" />
+    <Content Include="css\P_Registro.css" />
     <Content Include="DescripcionJuego.aspx" />
     <Content Include="imagenes\IMG-00001.jpg" />
     <Content Include="imagenes\IMG-00002.jpg" />
